# fx-spec

./: .gitignore  1.0-READINESS-ASSESSMENT.md  404.html  ARCHITECTURE_DECISIONS.md  BETA-RELEASE-PREP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_ACTION_PLAN.md  DOCUMENTATION_FIXES_SUMMARY.md  DOCUMENTATION_REVIEW.md  DOGFOODING.md  DSL_REFACTORING_SUMMARY.md  DSL_SYNTAX_EXPLORATION.md  FX.Spec.sln  FXSPEC_VS_RSPEC.md  FxSpec.sln  IMPLEMENTATION_PLAN.md  PHASE_3_2_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5.1_CODE_REVIEW.md  PHASE_5.1_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_CODE_REVIEW.md  PHASE_6_SUMMARY.md  PLAN_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  index.html  mkdocs.yml  pyproject.toml  run-tests.sh  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml
community/contributing/: index.html
design/: fx-spec-performance-benchmarking-task-list.md
docs/: Designing an F# RSpec Clone.md  index.md  quick-start.md  troubleshooting.md
docs/community/: contributing.md
docs/reference/: aspnetcore.md  dsl-api.md  http.md  index.md  json-api.md  json.md  runner.md
examples/: BasicExample.fsx  ErrorHandlingTest.fsx  MatchersExample.fsx  StateManagementExample.fsx
quick-start/: index.html
reference/: index.html
reference/aspnetcore/: index.html
reference/dsl-api/: index.html
reference/http/: index.html
reference/json/: index.html
reference/json-api/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
troubleshooting/: index.html
(+140 files in other folders)
