[project]
name = "fxspec-docs"
version = "0.1.0"
description = "FxSpec Documentation"
requires-python = ">=3.9"

dependencies = [
    "mkdocs-material>=9.6.22",
    "mkdocs-macros-plugin>=1.0.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "pymdown-extensions>=10.0",
]
